# chimaera

./: .gitattributes  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  justfile  rust-toolchain.toml
.agents/skills/audit-repo/: SKILL.md
.agents/skills/board/: SKILL.md
.agents/skills/capture-feature-intent/: SKILL.md
.agents/skills/chat-mode/: SKILL.md
.agents/skills/debug-live-app/: SKILL.md
.agents/skills/develop/: SKILL.md
.agents/skills/document-feature/: SKILL.md
.agents/skills/refresh-public-messaging/: SKILL.md
.agents/skills/ship-pr/: SKILL.md
.agents/skills/verify-app/: SKILL.md
.chimaera/board/: .gitignore
.claude/: launch.json  settings.json
.claude/agents/: area-implementer.md  diff-reviewer.md
.claude/hooks/: doc-drift.sh  fmt-rust.sh  guard-bash.sh  guard-bash.test.sh  guard-edit.sh  session-orient.sh
.claude/rules/: agent-protocol.md  daemon.md  native-app.md  pty.md  web-ui.md
.claude/skills/audit-repo/: SKILL.md
.claude/skills/board/: SKILL.md
.claude/skills/capture-feature-intent/: SKILL.md
.codex/agents/: area-implementer.toml  diff-reviewer.toml
.github/: dependabot.yml
.github/scripts/: cla.mjs  cla.test.mjs
.github/workflows/: app.yml  ci.yml  cla.yml  pages.yml  release.yml  wsl-smoke.yml
crates/chimaera/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/chimaera-agent/: AGENTS.md  CLAUDE.md  Cargo.toml  PROTOCOL.md
crates/chimaera-app/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json  tauri.windows.conf.json
crates/chimaera-app/assets/: index.html  setup.html
crates/chimaera-app/capabilities/: daemon-ui.json  wsl-setup.json
crates/chimaera-app/icons/: icon.icns
crates/chimaera-app/permissions/autogenerated/: add_host.toml  answer_askpass.toml  begin_update.toml  caffeinate_state.toml  cancel_compute_session.toml  connect_compute_session.toml  connect_host.toml  disconnect_host.toml  end_host_sessions.toml  install_app_update.toml  launch_compute_session.toml  list_askpass.toml  list_hosts.toml  local_state.toml  open_external.toml  remote_compute_sessions.toml  remote_workspaces.toml  remove_host.toml  report_window_scope.toml  set_caffeinate.toml  shell_build.toml  shutdown_host.toml  update_local_daemon.toml  write_clipboard.toml  wsl_install.toml  wsl_install_distro.toml  wsl_setup_daemon.toml  wsl_status.toml  wsl_update.toml
crates/chimaera-app/scripts/: gen-icon.mjs
crates/chimaera-app/src/: askpass.rs  caffeinate.rs  command_manifest.rs  daemon.rs  http.rs  main.rs  menu.rs  shell.rs  tray.rs  update.rs  windows.rs  wsl.rs
crates/chimaera-app/src/shell/: commands.rs  connect.rs  restore.rs
crates/chimaera-board/: AGENTS.md  Cargo.toml
crates/chimaera-board/examples/: render_sample.rs
crates/chimaera-board/fonts/text/: README.md
crates/chimaera-board/src/: arrange.rs  chart.rs  cli.rs  colormap.rs  composites.rs  cvd.rs  describe.rs  diagram.rs  equation.rs  icons.rs  imginfo.rs  journal.rs  layout.rs  lib.rs  lint.rs  merge.rs  normalize.rs  pdfimport.rs  presets.rs  pretty.rs  render.rs  schema.rs  show.rs  slots.rs  theme.rs
crates/chimaera-board/src/cli/: GUIDE.md
crates/chimaera-board/src/export/: chart_xml.rs  mod.rs  pdf.rs  pptx.rs  svg.rs
crates/chimaera-board/src/icons/: generate.py  tabler-meta.txt  tabler-outline.txt
crates/chimaera-board/src/themes/: figure-dark.theme.json  figure-light.theme.json  talk-dark.theme.json  talk-light.theme.json
crates/chimaera-core/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
crates/chimaera-core/src/: lib.rs  shellint.rs
crates/chimaera-core/src/shellint/: integration.bash  integration.fish  integration.zsh
crates/chimaera-pty/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/chimaera-pty/src/: exec.rs  lib.rs  marks.rs  session.rs  snapshot.rs  tests.rs
crates/chimaera-pty/tests/: wire_contract.rs
crates/chimaera-remote/: Cargo.toml
crates/chimaera-remote/src/: hosts.rs  lib.rs
crates/chimaera-server/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/chimaera-server/src/: agent_state.rs  agent_updates.rs  agents.rs  api.rs  assets.rs  board.rs  chat.rs  compute.rs  compute_jobs.rs  download.rs  environment.rs  exec.rs  fs.rs  fs_watch.rs  git.rs  launcher.rs  ledger.rs  lib.rs  lifecycle.rs  links.rs  mcp.rs  naming.rs  persist.rs  proxy.rs  quickopen.rs  recents.rs  router.rs  runtimes.rs  session_view.rs  settings.rs  spawn.rs  state.rs  update.rs  upload.rs  view_state.rs  workspaces.rs  ws.rs
crates/chimaera-server/src/api/: env.rs  exec.rs  mod.rs  sessions.rs  shutdown.rs  workspaces.rs
crates/chimaera-server/src/git/: http.rs  mod.rs  parse.rs  resolve.rs  service.rs  worktree.rs
crates/chimaera-server/src/tests/: agents.rs  board.rs  chat.rs  download.rs  environment.rs  exec.rs  fs.rs  git.rs  ledger.rs  links.rs  mastermind.rs  mcp.rs  mod.rs  proxy.rs  recents.rs  resumables.rs  router.rs  sessions.rs  settings.rs  shell.rs  support.rs  upload.rs  view_state.rs  workspaces.rs  ws.rs
crates/chimaera-server/src/tests/fixtures/: sample.xlsx
crates/chimaera/src/: board.rs  compute.rs  connect.rs  daemonize.rs  doctor.rs  kill.rs  main.rs  status.rs
docs/: agent-dashboard-plan.md  board-plan.md  chat-mode-live-checklist.md  skills-manager-plan.md  windows-wsl-plan.md
docs/agent-guides/: architecture.md  releases.md
docs/features/: README.md  agents.md  board.md  browser-pane.md  chat-mode.md  cli.md  compute.md  dashboard.md  drag-drop-and-uploads.md  environment.md  files-and-previews.md  git.md  lifecycle-and-persistence.md  linked-terminals.md  native-app.md  remote-connect.md  settings.md  terminals.md  workbench.md
docs/history/: field-notes.md
scripts/: check-agent-assets.mjs  check-doc-links.mjs  check-workflow-security.mjs  version-bump.sh  version-bump.test.sh
site/: docs.html  index.html
site/assets/css/: styles.css
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
web-ui/scripts/: gen-icons.mjs
web-ui/src/: App.svelte  app.css  main.ts
(+247 files in other folders)
