[workspace]
resolver = "2"
members = [
    "crates/chimaera",
    "crates/chimaera-core",
    "crates/chimaera-pty",
    "crates/chimaera-server",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/martinkjellberg/chimaera"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"
rand = "0.8"
dirs = "6"
hostname = "0.4"
nix = { version = "0.29", features = ["signal", "process"] }
open = "5"
mimalloc = "0.1"

bytes = "1"
futures = "0.3"
portable-pty = "0.9"
alacritty_terminal = "0.26"

chimaera-core = { path = "crates/chimaera-core" }
chimaera-pty = { path = "crates/chimaera-pty" }
chimaera-server = { path = "crates/chimaera-server" }

[profile.release]
lto = true
strip = true
codegen-units = 1
