[workspace]
resolver = "2"
members = [
    "crates/chimaera",
    "crates/chimaera-agent",
    "crates/chimaera-core",
    "crates/chimaera-pty",
    "crates/chimaera-remote",
    "crates/chimaera-server",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/martinappberg/chimaera"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"
rand = "0.10"
dirs = "6"
sha2 = "0.11"
hostname = "0.4"
nix = { version = "0.31", features = ["signal", "process", "fs"] }
rustix = { version = "1", features = ["fs"] }
open = "5"
mimalloc = "0.1"

bytes = "1"
futures = "0.3"
portable-pty = "0.9"
alacritty_terminal = "0.26"

chimaera-agent = { path = "crates/chimaera-agent" }
chimaera-core = { path = "crates/chimaera-core" }
chimaera-pty = { path = "crates/chimaera-pty" }
chimaera-remote = { path = "crates/chimaera-remote" }
chimaera-server = { path = "crates/chimaera-server" }

[profile.release]
lto = true
strip = true
codegen-units = 1
