[package]
name = "chimaera-app"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/martinappberg/chimaera"

# Deliberately a standalone workspace: the Tauri/webview stack must never
# enter the daemon workspace (musl CI, HPC login-node builds stay lean).
[workspace]

# The shipped binary is just "chimaera" (matches productName) so the dock,
# menu bar, and `ps` read the brand — not "chimaera-app".
[[bin]]
name = "chimaera"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = [] }
# Self-update: check GitHub releases, verify against the embedded minisign
# pubkey, download+swap the bundle. All updater ops run in Rust (the web
# UI only calls our check/install commands); relaunch uses core restart().
tauri-plugin-updater = "2"
ureq = "2"
urlencoding = "2"
nix = { version = "0.29", features = ["signal"] }

chimaera-core = { path = "../chimaera-core" }
chimaera-remote = { path = "../chimaera-remote" }
chimaera-server = { path = "../chimaera-server" }

[profile.release]
lto = true
strip = true
codegen-units = 1
