[package]
name = "chimaera-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rand.workspace = true
dirs.workspace = true
hostname.workspace = true
nix = { workspace = true, features = ["user"] }
