[package]
name = "chimaera-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rand.workspace = true
dirs.workspace = true

# Unix-only: uid/passwd lookups and the signal-0 liveness probe. The Windows
# build of the app workspace never touches processes by pid directly (the WSL
# shell probes liveness inside the distro), so core must compile without nix.
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user"] }
