[package]
name = "chimaera-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
rand.workspace = true
portable-pty.workspace = true
alacritty_terminal.workspace = true
nix.workspace = true

[dev-dependencies]
serde_json.workspace = true
