[package]
name = "chimaera-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
hostname.workspace = true
chimaera-core.workspace = true
chimaera-pty.workspace = true
futures.workspace = true
bytes.workspace = true
comrak = { version = "0.53.0", default-features = false }
ammonia = "4.1.3"
csv = "1.4.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
