[package]
name = "chimaera-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
hostname.workspace = true
chimaera-core.workspace = true
chimaera-pty.workspace = true
futures.workspace = true
bytes.workspace = true
comrak = { version = "0.53.0", default-features = false }
ammonia = "4.1.3"
csv = "1.4.0"
# Gzip tier for fs/file + fs/table (.gz/.bgz previews). BGZF is standard
# multi-member gzip, which MultiGzDecoder decodes sequentially.
flate2 = "1.1"

# macOS-only: foreground-process name/cwd for session display names
# (proc_pidinfo BSDINFO name / PIDVNODEPATHINFO cwd); Linux reads /proc.
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
