[package]
name = "chimaera-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
hostname.workspace = true
rustix.workspace = true
chimaera-agent.workspace = true
chimaera-core.workspace = true
chimaera-pty.workspace = true
futures.workspace = true
bytes.workspace = true
comrak = { version = "0.53.0", default-features = false }
ammonia = "4.1.3"
csv = "1.4.0"
# Spreadsheet previews (xlsx/xls/xlsm/ods) → the same paged TablePage the CSV
# viewer renders. calamine reads a whole sheet into memory, so the fs/xlsx
# handler caps both source size and ZIP expansion before parsing.
calamine = "0.26"
# Read only ZIP central-directory metadata to budget xlsx/xlsm/ods expansion
# before calamine materializes a workbook. Already present through calamine;
# this direct edge exposes the preflight API without adding another package.
zip = { version = "2.4.2", default-features = false }
# Gzip tier for fs/file + fs/table (.gz/.bgz previews). BGZF is standard
# multi-member gzip, which MultiGzDecoder decodes sequentially.
flate2 = "1.1"
# Folder downloads stream a zip: async_zip writes data-descriptor entries to
# any AsyncWrite (no Seek), so the archive flows through a bounded duplex
# pipe — never materialized in memory or on disk. Its read side also backs
# the tests, so no extra dev-dependency.
async_zip = { version = "0.0.18", default-features = false, features = ["tokio", "deflate"] }
# ReaderStream bridges plain files and the duplex's read half into an axum
# body stream (GET /download/{ticket}); compat adapts tokio files onto
# async_zip's futures-flavored entry writer.
tokio-util = { version = "0.7", features = ["io", "compat"] }

# macOS-only: foreground-process name/cwd for session display names
# (proc_pidinfo BSDINFO name / PIDVNODEPATHINFO cwd); Linux reads /proc.
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
