[package]
name = "chimaera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chimaera"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
open.workspace = true
mimalloc.workspace = true
chimaera-board.workspace = true
chimaera-core.workspace = true
chimaera-remote.workspace = true
chimaera-server.workspace = true
